<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SpeedReading Training</string>

    <string name="tab" translatable="false">\u0009\u0009\u0009\u0009</string>

    <!--toast start-->
    <string name="toast_not_supported">Not supported on your device</string>
    <string name="toast_permission_denied">Permission denied</string>
    <!--toast end-->

    <!--fragment labels start-->
    <string name="fragment_label_sign_in">Sign in</string>
    <string name="fragment_label_sign_up">Sign up</string>
    <string name="fragment_label_training">Lessons</string>
    <string name="fragment_label_account">Profile</string>
    <string name="fragment_label_settings">Settings</string>
    <string name="fragment_label_change_email">Change email</string>
    <string name="fragment_label_change_password">Change password</string>
    <string name="fragment_label_license">Privacy policy</string>
    <string name="fragment_label_color_scheme">Color scheme</string>
    <string name="fragment_label_color_scheme_custom">Own color scheme</string>
    <string name="fragment_label_font_settings">Font</string>
    <!--fragment labels end-->

    <!--bottom navigation view start-->
    <string name="menu_training" translatable="false">@string/fragment_label_training</string>
    <string name="menu_account" translatable="false">@string/fragment_label_account</string>
    <!--bottom navigation view end-->

    <!--notification channels start-->
    <string name="notification_channel_reminders_id" translatable="false">com.speedreading_training.reminder_notifications_channel</string>
    <string name="notification_channel_reminders_name">Training reminders</string>
    <!--notification channels end-->

    <!--reminder notification start-->
    <string name="reminder_notification_title">Reminder</string>
    <string name="reminder_notification_text">It\'s time for a training!</string>
    <!--reminder notification end-->

    <!--auth errors start-->
    <string name="auth_error_email_empty">Email cannot be empty</string>
    <string name="auth_error_email_incorrect">Email is invalid</string>
    <string name="auth_error_email_not_found">User with this email was not found</string>
    <string name="auth_error_password_empty">Password cannot be empty</string>
    <string name="auth_error_password_error">Wrong password</string>
    <string name="auth_error_email_already_in_use">Email is already taken</string>
    <string name="auth_error_passwords_not_match">Password and its confirmation must match</string>
    <string name="auth_error_weak_password">Passwords must contain at least 6 characters</string>
    <string name="auth_error_password_too_strong">Passwords must contain at most 16 characters</string>
    <string name="email_resetting_error_same_emails">New email must not be the same as the current email</string>
    <string name="password_resetting_error_same_passwords">New password must not be the same as the current password</string>
    <!--auth errors end-->

    <!--login fragment start-->
    <string name="login_text" translatable="false">@string/fragment_label_sign_in</string>
    <string name="login_email" translatable="false">Email</string>
    <string name="login_password">Password</string>
    <string name="login_password_forgotten">Forgot password?</string>
    <string name="login_enter_btn_txt">Sign in</string>
    <string name="login_register_tv_txt">Don\'t have an account? <u>Sign up</u></string>
    <!--login fragment end-->

    <!--register fragment start-->
    <string name="register_text" translatable="false">@string/fragment_label_sign_up</string>
    <string name="register_email" translatable="false">@string/login_email</string>
    <string name="register_password" translatable="false">@string/login_password</string>
    <string name="register_password_repeating">Repeat password</string>
    <string name="register_enter_btn_txt">Sign up</string>
    <string name="register_login_tv_txt">Already have an account? <u>Sign in</u></string>
    <!--register fragment end-->

    <!--email resetting fragment start-->
    <string name="email_resetting_text">Change email</string>
    <string name="email_resetting_email">Current email</string>
    <string name="email_resetting_new_email">New email</string>
    <string name="email_resetting_password" translatable="false">@string/login_password</string>
    <string name="email_resetting_continue_btn_txt">Continue</string>
    <!--email resetting fragment end-->

    <!--password resetting fragment start-->
    <string name="password_resetting_text">Change password</string>
    <string name="password_resetting_email" translatable="false">@string/login_email</string>
    <string name="password_resetting_password">Current password</string>
    <string name="password_resetting_new_password">New password</string>
    <string name="password_resetting_new_password_repeating">Repeat new password</string>
    <string name="password_resetting_continue_btn_txt" translatable="false">@string/email_resetting_continue_btn_txt</string>
    <!--password resetting fragment end-->

    <!--account fragment start-->
    <string name="account_settings" translatable="false">@string/fragment_label_settings</string>
    <string name="account_change_email_btn_txt" translatable="false">@string/fragment_label_change_email</string>
    <string name="account_change_password_btn_txt" translatable="false">@string/fragment_label_change_password</string>
    <string name="account_feedback_btn_txt">Feedback</string>
    <string name="account_license_btn_txt" translatable="false">@string/fragment_label_license</string>
    <string name="account_logout_btn_txt">Sign out</string>
    <!--account fragment end-->

    <!--settings fragment start-->
    <string name="settings_color_scheme_btn_txt" translatable="false">@string/fragment_label_color_scheme</string>
    <string name="settings_font_settings_btn_txt" translatable="false">@string/fragment_label_font_settings</string>
    <string name="settings_reminder_btn_txt">Reminder</string>
    <string name="settings_language_btn_txt">Language</string>
    <!--settings fragment end-->

    <!--color scheme fragment start-->
    <string name="color_scheme_light_btn_txt">Light</string>
    <string name="color_scheme_custom_btn_txt">Own</string>
    <!--color scheme fragment end-->

    <!--color scheme custom fragment start-->
    <string name="color_scheme_custom_back_btn_desc">Back</string>
    <string name="color_scheme_custom_set_background_color_btn_txt">Set background\ncolor</string>
    <string name="color_scheme_custom_set_text_color_btn_txt">Set text\ncolor</string>
    <string name="color_scheme_custom_sample_text_tv_txt">Example text</string>
    <string name="color_scheme_custom_save_btn_txt">Save changes</string>
    <!--color scheme custom fragment end-->

    <!--font settings fragment start-->
    <string name="font_settings_font_size_tv_txt">Font size:</string>
    <string name="font_settings_font_size_slider_desc">Choose font size</string>
    <string name="font_settings_font_size_slider_start" translatable="false">12</string>
    <string name="font_settings_font_size_slider_end" translatable="false">24</string>
    <string name="font_settings_line_spacing_tv_txt">Line spacing</string>
    <string name="font_settings_line_spacing_slider_desc">Choose line spacing</string>
    <string name="font_settings_line_spacing_slider_start" translatable="false">1</string>
    <string name="font_settings_line_spacing_slider_end" translatable="false">2</string>
    <string name="font_settings_text_alignment_switch_txt">Width alignment</string>
    <string name="font_settings_sample_text_tv_txt">"Example text Example text Example text Example text Example text Example text Example text "</string>
    <string name="font_settings_save_btn_txt" translatable="false">@string/color_scheme_custom_save_btn_txt</string>
    <!--font settings fragment end-->

    <!--lesson reading result fragment start-->
    <string name="lesson_reading_result_score_tv_txt">Result:</string>
    <string name="lesson_reading_result_menu_btn_txt">Menu</string>
    <!--lesson reading result fragment end-->

    <!--feedback start-->
    <string name="feedback_error_email_clients_not_installed">There are no email clients installed</string>
    <string name="feedback_email_client_choosing">What to use?</string>
    <string name="feedback_email" translatable="false">vlad.razon@mail.ru</string>
    <string name="feedback_subject">Comments and suggestions</string>
    <!--feedback end-->

    <!--dialog fragments start-->
    <string name="dialog_title_password_reset">Reset password</string>
    <string name="dialog_title_email_verification">Email confirmation</string>
    <string name="dialog_title_email_changed">Email has been changed</string>
    <string name="dialog_title_password_changed">Password has been changed</string>
    <string name="dialog_title_language_choosing">Choose the language</string>
    <string name="dialog_item_language_system">System language</string>
    <string name="dialog_desc_follow_instruction">Follow the instructions sent to the email</string>
    <!--dialog fragments end-->

    <!--reminder time picker dialog start-->
    <string name="reminder_time_picker_dialog_title" translatable="false">@string/settings_reminder_btn_txt</string>
    <string name="reminder_time_picker_dialog_mode_switch_txt">Mode</string>
    <!--reminder time picker dialog end-->
</resources>