<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@null"
        android:src="@drawable/round_chevron_left_24"
        android:scaleType="fitCenter"
        android:padding="0dp"
        app:tint="@color/brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/color_scheme_custom_back_btn_desc" />

    <com.larswerkman.holocolorpicker.ColorPicker
        android:id="@+id/picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.larswerkman.holocolorpicker.SVBar
        android:id="@+id/sv_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.larswerkman.holocolorpicker.OpacityBar
        android:id="@+id/opacity_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sv_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/set_background_color_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_scheme_custom_set_background_color_btn_txt"
        android:textAllCaps="false"
        android:textColor="@color/brown"
        android:backgroundTint="@color/white_yellow"
        app:layout_constraintTop_toBottomOf="@id/opacity_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/set_text_color_btn"/>

    <Button
        android:id="@+id/set_text_color_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_scheme_custom_set_text_color_btn_txt"
        android:textAllCaps="false"
        android:textColor="@color/brown"
        android:backgroundTint="@color/white_yellow"
        app:layout_constraintTop_toBottomOf="@id/opacity_bar"
        app:layout_constraintStart_toEndOf="@id/set_background_color_btn"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sample_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_scheme_custom_sample_text_tv_txt"
        android:textSize="16sp"
        android:textColor="@color/brown"
        android:background="@color/yellow_bg"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/set_background_color_btn"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_scheme_custom_save_btn_txt"
        android:textColor="@color/brown"
        android:backgroundTint="@color/white_yellow"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/sample_text_tv"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>