<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/violet">

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:textColor="@color/white"
        android:text="@string/login_text"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email_et"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/email_tv"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_email"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/email_et"
        app:layout_constraintLeft_toLeftOf="@id/email_et"
        android:layout_marginStart="-10dp" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_email"
        android:autofillHints="@string/login_email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/login_tv"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/password_tv"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/password_et"
        app:layout_constraintLeft_toLeftOf="@id/password_et"
        android:layout_marginStart="-10dp" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:autofillHints="@string/login_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:ems="16"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/email_et"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/password_visibility_btn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/eye_closed"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBaseline_toBaselineOf="@id/password_et"
        app:layout_constraintRight_toRightOf="@id/password_et" />

</androidx.constraintlayout.widget.ConstraintLayout>